[gd_scene load_steps=24 format=3 uid="uid://bb2hl8tark6g3"]

[ext_resource type="Texture2D" uid="uid://caps3eyvc0mt3" path="res://Assets/Art/undercloset.png" id="1_0hlf5"]
[ext_resource type="Texture2D" uid="uid://dtv6nhm71doil" path="res://Assets/Art/Kitchen.png" id="2_osqap"]
[ext_resource type="Texture2D" uid="uid://cij3065fgcvc2" path="res://Assets/Art/Bathroom1.png" id="3_wjs62"]
[ext_resource type="Texture2D" uid="uid://dl6dadmmkk3ro" path="res://Assets/Art/intomud.png" id="4_hui3d"]
[ext_resource type="Texture2D" uid="uid://bdl1ejqhsrkfu" path="res://Assets/Art/mudroom.png" id="5_3i7e6"]
[ext_resource type="Texture2D" uid="uid://bu7w24cbm6ybp" path="res://Assets/Art/Enter.png" id="6_6ijhe"]
[ext_resource type="Texture2D" uid="uid://cc1xn4bgtvns0" path="res://Assets/Art/stairroom.png" id="7_4yqb0"]
[ext_resource type="Texture2D" uid="uid://de5rckmrbd1i7" path="res://Assets/Art/bathunderbed.png" id="8_01b5g"]
[ext_resource type="Texture2D" uid="uid://2uj05ci6tdjc" path="res://Assets/Art/bedenter.png" id="9_0xhxu"]
[ext_resource type="Texture2D" uid="uid://3pyim44qgkra" path="res://Assets/Art/bed.png" id="10_cgcut"]
[ext_resource type="Texture2D" uid="uid://br8y4j1uje8ww" path="res://Assets/Art/enterstairroom.png" id="11_t8v2m"]
[ext_resource type="Texture2D" uid="uid://cgcqg1s53711j" path="res://Assets/Art/garage1.png" id="12_nsonk"]
[ext_resource type="Texture2D" uid="uid://byu86u4b2o8s2" path="res://Assets/Art/garage2.png" id="13_dxdyy"]
[ext_resource type="Texture2D" uid="uid://bli7oic53rpcv" path="res://Assets/Art/Friend.png" id="14_8kj4n"]
[ext_resource type="PackedScene" uid="uid://bsqhqkxu74jve" path="res://Mom/mom.tscn" id="18_rt3f5"]
[ext_resource type="PackedScene" uid="uid://7q65lapufcsh" path="res://Items/ItemSpawner/ItemSpawnerController.tscn" id="19_8toki"]
[ext_resource type="PackedScene" uid="uid://c4lk76dkkl632" path="res://Items/ItemSpawner/ItemSpawner.tscn" id="20_exgj1"]
[ext_resource type="PackedScene" uid="uid://cmppofskqyqet" path="res://Backpack/BackpackController.tscn" id="22_vsuxi"]
[ext_resource type="PackedScene" uid="uid://be5y6f8jhr140" path="res://Scenes/pause_game.tscn" id="23_5uo8w"]
[ext_resource type="PackedScene" uid="uid://c6243srn1nh7k" path="res://Scenes/Home/TileMaps.tscn" id="23_p81q8"]
[ext_resource type="PackedScene" uid="uid://du5771snnb4p1" path="res://HintList/HintList.tscn" id="24_u6uem"]
[ext_resource type="Script" uid="uid://cnvjhwwxlf6kg" path="res://Scripts/ExitHouse.gd" id="25_3x5mh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_guf2q"]
size = Vector2(407, 82)

[node name="Home" type="Node2D"]
y_sort_enabled = true

[node name="Level Design" type="Node2D" parent="."]
visible = false

[node name="Undercloset" type="Sprite2D" parent="Level Design"]
position = Vector2(4800, 1620)
texture = ExtResource("1_0hlf5")

[node name="Kitchen" type="Sprite2D" parent="Level Design"]
position = Vector2(6720, 1620)
texture = ExtResource("2_osqap")

[node name="Bathroom1" type="Sprite2D" parent="Level Design"]
position = Vector2(6720, 540)
texture = ExtResource("3_wjs62")

[node name="Intomud" type="Sprite2D" parent="Level Design"]
position = Vector2(6720, 2700)
texture = ExtResource("4_hui3d")

[node name="Mudroom" type="Sprite2D" parent="Level Design"]
position = Vector2(8640, 2700)
texture = ExtResource("5_3i7e6")

[node name="Enter" type="Sprite2D" parent="Level Design"]
position = Vector2(4800, 540)
texture = ExtResource("6_6ijhe")

[node name="Stairroom" type="Sprite2D" parent="Level Design"]
position = Vector2(4800, 2700)
texture = ExtResource("7_4yqb0")

[node name="Bathunderbed" type="Sprite2D" parent="Level Design"]
position = Vector2(960, 2700)
texture = ExtResource("8_01b5g")

[node name="Bedenter" type="Sprite2D" parent="Level Design"]
position = Vector2(2880, 1620)
texture = ExtResource("9_0xhxu")

[node name="Bed" type="Sprite2D" parent="Level Design"]
position = Vector2(960, 1620)
texture = ExtResource("10_cgcut")

[node name="Enterstairroom" type="Sprite2D" parent="Level Design"]
position = Vector2(2880, 2700)
texture = ExtResource("11_t8v2m")

[node name="Garage1" type="Sprite2D" parent="Level Design"]
position = Vector2(8640, 1620)
texture = ExtResource("12_nsonk")

[node name="Garage2" type="Sprite2D" parent="Level Design"]
position = Vector2(8640, 540)
texture = ExtResource("13_dxdyy")

[node name="Mom" parent="." instance=ExtResource("18_rt3f5")]
position = Vector2(6113, 1797)
speed = 500.0
moving_bounce_speed = 13.0

[node name="itemSpawnerControler" parent="." instance=ExtResource("19_8toki")]

[node name="ItemSpawners" type="Node2D" parent="."]

[node name="SwordSpawner" parent="ItemSpawners" instance=ExtResource("20_exgj1")]
position = Vector2(5795, 2357)
IdsToAccept = PackedInt32Array(3002, 3003, 3004, 3005, 3006, 3007)

[node name="SwordSpawner2" parent="ItemSpawners" instance=ExtResource("20_exgj1")]
position = Vector2(5526, 1953)
IdsToAccept = PackedInt32Array(3002, 3003, 3004, 3005, 3006, 3007)

[node name="SwordSpawner3" parent="ItemSpawners" instance=ExtResource("20_exgj1")]
position = Vector2(5506, 1617)
IdsToAccept = PackedInt32Array(3002, 3003, 3004, 3005, 3006, 3007)

[node name="SwordSpawner4" parent="ItemSpawners" instance=ExtResource("20_exgj1")]
position = Vector2(5903, 1906)
IdsToAccept = PackedInt32Array(3002, 3003, 3004, 3005, 3006, 3007)

[node name="SwordSpawner5" parent="ItemSpawners" instance=ExtResource("20_exgj1")]
position = Vector2(6253, 2148)
IdsToAccept = PackedInt32Array(3002, 3003, 3004, 3005, 3006, 3007)

[node name="SwordSpawner6" parent="ItemSpawners" instance=ExtResource("20_exgj1")]
position = Vector2(6583, 2155)
IdsToAccept = PackedInt32Array(3002, 3003, 3004, 3005, 3006, 3007)

[node name="BackpackController" parent="." instance=ExtResource("22_vsuxi")]

[node name="PauseGame" parent="." instance=ExtResource("23_5uo8w")]

[node name="HintList" parent="." instance=ExtResource("24_u6uem")]

[node name="ExitHouse" type="Area2D" parent="."]
script = ExtResource("25_3x5mh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitHouse"]
position = Vector2(5222, -18)
shape = SubResource("RectangleShape2D_guf2q")

[node name="Tracker" type="Sprite2D" parent="ExitHouse"]
position = Vector2(5221, -62)
texture = ExtResource("14_8kj4n")

[node name="TileMaps" parent="." instance=ExtResource("23_p81q8")]

[connection signal="ContentChange" from="BackpackController" to="Mom" method="_on_backpack_controller_content_change"]
[connection signal="body_entered" from="ExitHouse" to="ExitHouse" method="_on_body_entered"]
